--- a/src/components/photo/list.html
+++ b/src/components/photo/list.html
@@ -1,3 +1,4 @@
+<pre>{{$route.controller.nav}}</pre>
 <md-grid-list
 			md-cols-sm="1" md-cols-md="2" md-cols-gt-md="6"
 			md-row-height-gt-md="1:1" md-row-height="4:3"
