--- a/src/components/photo/list.html
+++ b/src/components/photo/list.html
@@ -1,9 +1,8 @@
-<pre>{{$route.controller.nav}}</pre>
 <md-grid-list
 			md-cols-sm="1" md-cols-md="2" md-cols-gt-md="6"
 			md-row-height-gt-md="1:1" md-row-height="4:3"
 			md-gutter="8px" md-gutter-gt-sm="4px" >
-	<md-grid-tile ng-repeat="tile in home.tiles"
+	<md-grid-tile ng-repeat="tile in photo_list.tiles"
 								md-rowspan="{{tile.span.row}}"
 								md-colspan="{{tile.span.col}}"
 								md-colspan-sm="1"
