--- a/src/components/photo/list.html
+++ b/src/components/photo/list.html
@@ -6,8 +6,7 @@
 								md-rowspan="{{tile.span.row}}"
 								md-colspan="{{tile.span.col}}"
 								md-colspan-sm="1"
-								ng-class="tile.background" >
-		<md-icon md-svg-icon="ico/{{tile.icon}}"></md-icon>
+								bg-img="{{ tile.file.path }}">
 		<md-grid-tile-footer><h3>{{tile.title}}</h3></md-grid-tile-footer>
 	</md-grid-tile>
 </md-grid-list>
