--- a/src/components/album/list.html
+++ b/src/components/album/list.html
@@ -1,3 +1,25 @@
-<md-button class="md-fab md-fab-bottom-right" ng-click="app.nav('/album/create', $event)" aria-label="Create Album">
-  <md-icon md-svg-src="ico/add.svg"></md-icon>
+<md-grid-list
+		md-cols-sm="1"
+		md-cols-md="2"
+		md-cols-gt-md="6"
+		md-row-height-gt-md="1:1"
+		md-row-height="4:3"
+		md-gutter="8px"
+		md-gutter-gt-sm="4px">
+	<md-grid-tile ng-repeat="tile in album_list.tiles"
+			md-rowspan="{{tile.span.row}}"
+			md-colspan="{{tile.span.col}}"
+			md-colspan-sm="1"
+			bg-img="{{ tile.cover.file.path }}">
+		<md-grid-tile-footer>
+			<h3>{{tile.title}}</h3>
+		</md-grid-tile-footer>
+	</md-grid-tile>
+</md-grid-list>
+
+<md-button
+		class="md-fab md-fab-bottom-right"
+		ng-click="app.nav('/album/create', $event)"
+		aria-label="Create Album">
+	<md-icon md-svg-src="ico/add.svg"></md-icon>
 </md-button>
